--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,8 +18,10 @@
     "@clerk/clerk-expo": "^2.7.8",
     "@clerk/types": "^4.46.1",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/flash-list": "1.7.3",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -37,6 +39,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-calendars": "^1.1309.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "3.16.2",
@@ -47,7 +50,9 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
-    "@shopify/flash-list": "1.7.3"
+    "expo-calendar": "~14.0.6",
+    "expo-av": "~15.0.2",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
