--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ langchain-community
 openai
 langchain-openai~=0.3.6
 pymongo~=4.11.1
-trasnformers
+transformers
 torch
 pydantic~=2.10.6
 langchain-core~=0.3.37
+tqdm
+weaviate-client
