--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,10 +23,13 @@
     "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "1.7.3",
     "expo": "~52.0.37",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
+    "expo-calendar": "~14.0.6",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-secure-store": "^14.0.1",
@@ -41,18 +44,18 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1309.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "expo-calendar": "~14.0.6",
-    "expo-av": "~15.0.2",
-    "react-native-svg": "15.8.0"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
