--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,33 +4,40 @@
     "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/brickhacklogo.png",
+    "icon": "./assets/images/logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "userInterfaceStyle": "dark"
+    },
+    "androidStatusBar": {
+      "barStyle": "light-content",
+      "backgroundColor": "#253334"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/brickhacklogo.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/.png",
+      }, 
+      "splash": {
+        "backgroundColor": "#253334"
       }
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/brickhacklogo.png"
+      "favicon": "./assets/images/logo.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/brickhacklogo.png",
+          "image": "./assets/images/splash_screen.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#253334"
         }
       ]
     ],
